cmake_minimum_required(VERSION 3.10)
project(cmakehmwk10.2.2)
add_executable(cmakehmwk10.2.2 Equilateral_Triangle.cpp Equilateral_Triangle.h Equilateral_Triangle.cpp 
Figure.cpp Figure.h Homework_6.3.cpp Isosceles_Triangle.cpp Isosceles_Triangle.h Parallelogram.cpp 
Parallelogram.h Quadrangle.cpp Quadrangle.h Rectangle.cpp Rectangle.h Rhombus.cpp Rhombus.h 
Right_Triangle.cpp Right_Triangle.h Square.cpp Square.h Triangle.cpp Triangle.h)